Optimización y reorganización de código