@@ -6,26 +6,14 @@ import backend.Enum.Priority;
 import java.util.*;
 
 public class WorldMap {
-    private ArrayList<Stop> stops;
-    private ArrayList<Route> routes;
+    private final ArrayList<Stop> stops;
+    private final ArrayList<Route> routes;
     private static WorldMap instance;
     private List<Stop> lastCalculatedPath;
 
     public WorldMap(ArrayList<Stop> stops, ArrayList<Route> routes) {
         this.stops = stops;
         this.routes = routes;
-    }
-
-    public void createStop(Stop stop) {
-        stops.add(stop);
-    }
-
-    public List<Stop> getStops() {
-        return stops;
-    }
-
-    public void createRoute(Route route) {
-        routes.add(route);
     }
 
     public static WorldMap getInstance() {
@@ -35,202 +23,167 @@ public class WorldMap {
         return instance;
     }
 
+    public List<Stop> getLastCalculatedPath() {
+        return lastCalculatedPath;
+    }
+
+    public void createStop(Stop stop) {
+        stops.add(stop);
+    }
+
+    public void createRoute(Route route) {
+        routes.add(route);
+    }
+
+    public List<Stop> getStops() {
+        return stops;
+    }
+
+    public void addStop(Stop stop) {
+        stops.add(stop);
+    }
+
+    public Stop findStopById(int id) {
+        for (Stop stop : stops) {
+            if (stop.getId() == id) {
+                return stop;
+            }
+        }
+        return null;
+    }
+
     public void dijkstra(Stop start, Stop end, Priority priority) {
-        // Inicializar distancias y predecesores
+        if (start == null || end == null) return;
+
         Map<Stop, Integer> distances = new HashMap<>();
         Map<Stop, Stop> predecessors = new HashMap<>();
         Set<Stop> visited = new HashSet<>();
-
-        for (Stop stop : stops) {
-            distances.put(stop, Integer.MAX_VALUE);
-        }
-        distances.put(start, 0);
-
         PriorityQueue<Stop> queue = new PriorityQueue<>(Comparator.comparingInt(distances::get));
+
+        for (Stop stop : stops) distances.put(stop, Integer.MAX_VALUE);
+        distances.put(start, 0);
         queue.add(start);
 
         while (!queue.isEmpty()) {
             Stop current = queue.poll();
+            if (visited.contains(current)) continue;
 
-            // Si llegamos al destino, dejamos de buscar
-            if (current.equals(end)) {
-                break;
-            }
-
-            if (visited.contains(current)) {
-                continue; // Evitar procesamiento de nodos visitados
-            }
             visited.add(current);
 
             for (Stop neighbor : current.getAdjacencyList()) {
                 Route route = current.getRoute(neighbor);
-                if (route == null || route.getTime() == -1) {
-                    System.out.println("No es posible llegar de " + current.getId() + " a " + neighbor.getId() + " debido a un accidente.");
-                    continue;
-                }
+                if (route == null || calculatePriority(distances.get(current), route, priority) == -1) continue;
 
-                int currentDist = distances.get(current);
-                int newDist = calculatePriority(currentDist, route, priority);
-
+                int newDist = calculatePriority(distances.get(current), route, priority);
                 if (newDist < distances.get(neighbor)) {
                     distances.put(neighbor, newDist);
-                    predecessors.put(neighbor, current); // Guardar el predecesor
-                    queue.add(neighbor); // Añadir vecino a la cola para futuras evaluaciones
+                    predecessors.put(neighbor, current);
+                    queue.add(neighbor);
                 }
             }
-        }
-
-        // Verificar si hay una ruta desde el inicio hasta el destino
-        if (distances.get(end) == Integer.MAX_VALUE) {
-            System.out.println("No existe una ruta desde " + start.getId() + " hasta " + end.getId());
-        } else {
-            if(priority == null){
-                System.out.println("Precio promedio más corto de " + start.getId() + " a " + end.getId() + ": " + distances.get(end));
-                System.out.println("Ruta: " + routeList(start, end, predecessors));
-            }
-            else System.out.println("Distancia más corta de " + start.getId() + " a " + end.getId() + " usando " + priority.name() + ": " + distances.get(end));
-            System.out.println("Ruta: " + routeList(start, end, predecessors));
         }
 
         lastCalculatedPath = reconstructPath(predecessors, start, end);
+        printPath(start, end, distances.get(end), lastCalculatedPath);
     }
 
-
-    public void BellmanFord(Stop start, Priority priority) {
-        HashMap<Stop, Integer> distances = new HashMap<>();
-        HashMap<Stop, List<Stop>> paths = new HashMap<>();
-        List<Stop> allStops = getAllStops();  // Evitar múltiples llamadas
-
-        // Inicializar distancias y rutas
-        for (Stop stop : allStops) {
-            distances.put(stop, Integer.MAX_VALUE);
-            paths.put(stop, new ArrayList<>());
+    public void BellmanFord(Stop start, Stop end, Priority priority) {
+        if (start == null || end == null) {
+            System.out.println("Los nodos de inicio y final no pueden ser nulos.");
+            return;
         }
-        distances.put(start, 0);
-        paths.get(start).add(start);
 
-        // Relajación de las aristas
-        for (int i = 1; i < allStops.size(); i++) {
-            boolean updated = false;  // Para detectar si hubo cambios
-            for (Stop stop : allStops) {
-                int currentDistance = distances.get(stop);
-                for (Stop neighbor : stop.getAdjacencyList()) {
-                    int newDist = calculatePriority(currentDistance, stop.getRoute(neighbor), priority);
+        Map<Stop, Integer> distances = new HashMap<>();
+        Map<Stop, Stop> predecessors = new HashMap<>();
+        for (Stop stop : stops) distances.put(stop, Integer.MAX_VALUE);
+        distances.put(start, 0);
+
+        // Relax edges |V| - 1 times
+        for (int i = 1; i < stops.size(); i++) {
+            boolean updated = false;
+            for (Stop current : stops) {
+                for (Stop neighbor : current.getAdjacencyList()) {
+                    Route route = current.getRoute(neighbor);
+                    if (route == null || calculatePriority(distances.get(current), route, priority) == -1) continue;
+
+                    int newDist = calculatePriority(distances.get(current), route, priority);
                     if (newDist < distances.get(neighbor)) {
                         distances.put(neighbor, newDist);
-                        paths.get(neighbor).clear();  // Limpiar la ruta anterior
-                        paths.get(neighbor).addAll(paths.get(stop));  // Agregar la ruta más corta
-                        paths.get(neighbor).add(neighbor);  // Agregar el vecino
-                        updated = true;  // Se realizó una actualización
+                        predecessors.put(neighbor, current);
+                        updated = true;
                     }
                 }
             }
-            if (!updated) {
-                break;  // Si no hubo actualizaciones, salir del bucle
+            if (!updated) break;
+        }
+
+        // Check for negative-weight cycles
+        for (Stop current : stops) {
+            for (Stop neighbor : current.getAdjacencyList()) {
+                Route route = current.getRoute(neighbor);
+                if (route == null || calculatePriority(distances.get(current), route, priority) == -1) continue;
+
+                int newDist = calculatePriority(distances.get(current), route, priority);
+                if (newDist < distances.get(neighbor)) {
+                    System.out.println("El grafo contiene un ciclo de peso negativo.");
+                    return;
+                }
             }
         }
 
-        // Imprimir resultados
-        for (Stop stop : allStops) {
-            System.out.println("Distancia más corta de " + start.getId() + " a " + stop.getId() + ": " + distances.get(stop));
-            System.out.println("Ruta: " + paths.get(stop).stream().map(Stop::getId).toList());
+        // Reconstruct and print the best path from start to end
+        lastCalculatedPath = reconstructPath(predecessors, start, end);
+        if (lastCalculatedPath.isEmpty()) {
+            System.out.println("No existe un camino entre " + start.getId() + " y " + end.getId() + ".");
+        } else {
+            printPath(start, end, distances.get(end), lastCalculatedPath);
         }
     }
 
 
     public void FloydWarshall(Stop start, Stop end, Priority priority) {
         int n = stops.size();
-        double [][] dist = new double[n][n];
-        int[][] next = new int[n][n];
-        final int NO_PATH = Integer.MAX_VALUE;
+        double[][] dist = new double[n][n];
+        Stop[][] next = new Stop[n][n];
+        final double NO_PATH = Double.MAX_VALUE;
 
-        // Inicializar matrices de distancia y siguiente
         for (int i = 0; i < n; i++) {
-            Stop stopI = stops.get(i);
             for (int j = 0; j < n; j++) {
+                Stop stopI = stops.get(i);
                 Stop stopJ = stops.get(j);
+                Route route = stopI.getRoute(stopJ);
+
                 if (i == j) {
                     dist[i][j] = 0;
-                    next[i][j] = i;
+                    next[i][j] = stopI;
+                } else if (route != null && calculatePriority(0, route, priority) != -1) {
+                    dist[i][j] = calculatePriority(0, route, priority);
+                    next[i][j] = stopJ;
                 } else {
-                    double weight = calculatePriority(0, stopI.getRoute(stopJ), priority);
-                    if (weight != -1) {
-                        dist[i][j] = weight;
-                        next[i][j] = j;
-                    } else {
-                        dist[i][j] = NO_PATH;
-                        next[i][j] = -1;
-                    }
+                    dist[i][j] = NO_PATH;
+                    next[i][j] = null;
                 }
             }
         }
 
-        // Algoritmo de Floyd-Warshall
         for (int k = 0; k < n; k++) {
             for (int i = 0; i < n; i++) {
-                if (dist[i][k] < NO_PATH) { // Solo evaluar si hay un camino a través de k
-                    for (int j = 0; j < n; j++) {
-                        if (dist[k][j] < NO_PATH && dist[i][k] + dist[k][j] < dist[i][j]) {
-                            dist[i][j] = dist[i][k] + dist[k][j];
-                            next[i][j] = next[i][k];
-                        }
+                for (int j = 0; j < n; j++) {
+                    if (dist[i][k] != NO_PATH && dist[k][j] != NO_PATH && dist[i][k] + dist[k][j] < dist[i][j]) {
+                        dist[i][j] = dist[i][k] + dist[k][j];
+                        next[i][j] = next[i][k];
                     }
                 }
             }
         }
 
-        if(start == null || end == null) {
-            // Imprimir resultados de distancias más cortas y caminos
-            System.out.println("Distancias más cortas entre todas las paradas:");
-            for (int i = 0; i < n; i++) {
-                for (int j = 0; j < n; j++) {
-                    if (dist[i][j] == NO_PATH) {
-                        System.out.printf("No hay camino de %d a %d%n", stops.get(i).getId(), stops.get(j).getId());
-                    } else {
-                        System.out.printf("Distancia más corta de %d a %d: %d%n", stops.get(i).getId(), stops.get(j).getId(), dist[i][j]);
-                        System.out.print("Ruta: ");
-                        printPath(i, j, next);
-                        System.out.println();
-                    }
-                }
-            }
-        }
-        else{
+        if (start != null && end != null) {
             int startIndex = stops.indexOf(start);
             int endIndex = stops.indexOf(end);
 
-            // If no path exists between start and end, return
-            if (dist[startIndex][endIndex] == NO_PATH) {
-                System.out.println("No path exists from " + start.getId() + " to " + end.getId());
-                return;
+            if (dist[startIndex][endIndex] != NO_PATH) {
+                printPath(start, end, dist[startIndex][endIndex], reconstructFloydPath(startIndex, endIndex, next));
             }
-
-            // Print the shortest distance
-            System.out.println("The shortest distance from stop " + start.getId() + " to stop " + end.getId() + " is: " + dist[startIndex][endIndex]);
-
-            // Print the path
-            System.out.print("Path: ");
-            printPath(startIndex, endIndex, next);
-            System.out.println();
-        }
-    }
-
-
-
-    // Método auxiliar para imprimir la ruta de i a j
-    private void printPath(int i, int j, int[][] next) {
-        if (next[i][j] == -1) {
-            System.out.print("No existe una ruta");
-            return;
-        }
-        List<Integer> path = new ArrayList<>();
-        while (i != j) {
-            path.add(stops.get(i).getId());
-            i = next[i][j];
-        }
-        path.add(stops.get(j).getId());
-        for (int id : path) {
-            System.out.print(id + " ");
         }
     }
 
@@ -239,8 +192,7 @@ public class WorldMap {
         Set<Stop> mstVertices = new HashSet<>();
         PriorityQueue<Route> edgeQueue = new PriorityQueue<>(Comparator.comparingInt(Route::getCost));
 
-        // Seleccionar el primer vértice y agregar sus aristas a la cola de prioridad
-        Stop start = stops.get(0);
+        Stop start = stops.getFirst();
         mstVertices.add(start);
         edgeQueue.addAll(start.getRoutes());
 
@@ -248,146 +200,81 @@ public class WorldMap {
             Route minEdge = edgeQueue.poll();
             Stop nextVertex = minEdge.getEnd();
 
-            // Si el destino de la arista ya está en el árbol, omitir
-            if (mstVertices.contains(nextVertex)) {
-                continue;
-            }
+            if (mstVertices.contains(nextVertex)) continue;
 
-            // Agregar arista y vértice al árbol de expansión mínima
             mstVertices.add(nextVertex);
             mstEdges.add(minEdge);
 
-            // Agregar nuevas aristas a la cola de prioridad
             for (Route edge : nextVertex.getRoutes()) {
-                if (!mstVertices.contains(edge.getEnd())) {
-                    edgeQueue.add(edge);
-                }
+                if (!mstVertices.contains(edge.getEnd())) edgeQueue.add(edge);
             }
 
-            // Impresión de la arista añadida
-            System.out.println("Agregando arista: " + minEdge.getStart().getId() + " -> " + minEdge.getEnd().getId() + " Costo: " + minEdge.getCost());
+            System.out.println("Agregando arista: " + minEdge.getStart().getId() + " -> " + minEdge.getEnd().getId());
         }
 
-        // Imprimir el árbol de expansión mínima
-        System.out.println("Árbol de expansión mínima:");
-        for (Route edge : mstEdges) {
-            System.out.println(edge.getStart().getId() + " -> " + edge.getEnd().getId() + " Costo: " + edge.getCost());
-        }
+        mstEdges.forEach(edge -> System.out.println(edge.getStart().getId() + " -> " + edge.getEnd().getId()));
     }
 
-
     public List<Route> Kruskal() {
-        List<Route> result = new ArrayList<>(); // Para almacenar el resultado
-        List<Route> edges = new ArrayList<>(); // Para almacenar todas las rutas (aristas)
+        List<Route> result = new ArrayList<>();
+        List<Route> edges = new ArrayList<>();
+        stops.forEach(stop -> edges.addAll(stop.getRoutes()));
+        edges.sort(Comparator.comparingInt(Route::getDistance));
 
-        // Reunir todas las aristas
-        for (Stop stop : stops) {
-            for (Route route : stop.getRoutes()) {
-                edges.add(route);
-            }
-        }
-
-        // Ordenar las aristas por distancia (o costo)
-        Collections.sort(edges, Comparator.comparingInt(Route::getDistance));
-
-        UnionFind uf = new UnionFind(); // Crear un objeto UnionFind
-
+        UnionFind uf = new UnionFind();
         for (Route edge : edges) {
             int startId = edge.getStart().getId();
             int endId = edge.getEnd().getId();
-
-            // Si no están conectados, añadir la ruta al resultado y unir los conjuntos
             if (!uf.connected(startId, endId)) {
                 uf.union(startId, endId);
                 result.add(edge);
             }
         }
-
-        return result; // Devuelve las rutas del árbol de expansión mínima
+        return result;
     }
 
     private List<Stop> reconstructPath(Map<Stop, Stop> predecessors, Stop start, Stop end) {
         List<Stop> path = new ArrayList<>();
         Stop current = end;
-
         while (current != null) {
             path.add(current);
             current = predecessors.get(current);
         }
-
         Collections.reverse(path);
+        return (!path.isEmpty() && path.getFirst().equals(start)) ? path : Collections.emptyList();
+    }
 
-        // Verify that the path starts with our start node
-        if (!path.isEmpty() && path.get(0).equals(start)) {
-            return path;
-        } else {
-            return Collections.emptyList();
+    private List<Stop> reconstructFloydPath(int startIndex, int endIndex, Stop[][] next) {
+        List<Stop> path = new ArrayList<>();
+        int currentIndex = startIndex;
+        while (currentIndex != endIndex) {
+            if (next[currentIndex][endIndex] == null) return Collections.emptyList();
+            path.add(stops.get(currentIndex));
+            currentIndex = stops.indexOf(next[currentIndex][endIndex]);
         }
+        path.add(stops.get(endIndex));
+        return path;
     }
-
-    public List<Stop> getLastCalculatedPath() {
-        return lastCalculatedPath;
-    }
-
-
-    public List<Stop> getAllStops() {
-        return stops;
-    }
-
-    private List<Integer> routeList(Stop start, Stop end, Map<Stop, Stop> predecessors) {
-        List<Integer> path = new ArrayList<>();
-        for (Stop at = end; at != null; at = predecessors.get(at)) {
-            path.add(at.getId());
-        }
-        Collections.reverse(path);
-        // Cambiar la verificación a:
-        if (!path.isEmpty() && path.getFirst().equals(start.getId())) {
-            return path; // Retornar la ruta si es válida
-        } else {
-            return Collections.emptyList(); // Retornar lista vacía si no hay ruta
-        }
-    }
-
 
     private int calculatePriority(int currentDistance, Route route, Priority priority) {
-        int result = 0;
-        if(route == null){
-            return -1;
-        }
-        if(priority == null){
-            return currentDistance + route.getTransports() + (int) route.getCost() + route.getTime() + route.getDistance();
-        }
-        switch (priority) {
-            case DISTANCE:
-                result = currentDistance + route.getDistance();
-                break;
-            case TIME:
-                result = currentDistance + route.getTime();
-                break;
-            case COST:
-                result = currentDistance + (int) route.getCost();
-                break;
-            case TRANSPORTS:
-                result = currentDistance + route.getTransports();
-                break;
-            default:
-                result = currentDistance + route.getTransports() + (int) route.getCost() + route.getTime() + route.getDistance();
-        }
-        return result;
+        if (route == null) return -1;
+        return switch (priority) {
+            case DISTANCE -> currentDistance + route.getDistance();
+            case TIME -> currentDistance + route.getTime();
+            case COST -> currentDistance + route.getCost();
+            case TRANSPORTS -> currentDistance + route.getTransports();
+            default ->
+                    currentDistance + route.getDistance() + route.getTime() + route.getTransports() + route.getCost();
+        };
     }
 
-    public Stop findStopById(int id){
-        for(Stop stop : stops){
-            if(stop.getId() == id){
-                return stop;
-            }
+    private void printPath(Stop start, Stop end, double distance, List<Stop> path) {
+        if (path.isEmpty()) {
+            System.out.println("No existe un camino entre " + start.getId() + " y " + end.getId());
+        } else {
+            System.out.println("Camino desde " + start.getId() + " hasta " + end.getId() + ":");
+            System.out.println("Distancia: " + distance);
+            System.out.println("Paradas: " + path.stream().map(Stop::getId).toList());
         }
-        return null;
     }
-
-    public void addStop(Stop stop1) {
-        stops.add(stop1);
-    }
-    
-
 }
